
2012-June-10 Struan Robertson

	* SimpleILT.cpp: Fixed bug relating to readin of activation energy.

	* Reaction.h: Minor refactoring.

	* Revised header file include strategy.
	
2012-June-09 Struan Robertson

	* DefinedSumOfStates.cpp: Splines added to calculate reaction flux.
	
2012-June-08 Chris Morley

	* src/plugins/gridsearch.cpp: set all range variable values to their
	lower bound at the start. Allows the value attribute to be freely set
	and single or range runs to chosen by <me:calcMethod> alone.
	
	* src/plugins/MesmerILT.cpp, src/plugins/SimpleILT.cpp: correct bug
	which caused energy conversion during setup of a range variable to 
	be wrong when the value was 0.
	
	* src/CollisionOperator.cpp, src/CollisionOperator.h, src/System.cpp:
	modify writing of grain population XML output so that include T and
	conc are included. 

	* src/System.cpp: modify range variable names in the XML output because
	':' is incompatible with XML.
	 
	* mesmer1.xsl, popDiag.xsl: grain population diagram improved but
	not yet ok when there are multiple conditions.

2012-June-05 Chris Morley

	* src/CollisionOperator.cpp: make grain population output normalised
	  - for a given species at a a given time output sum to 1.0. Do not
	  output very small populations. Used fixed format (XSLT flakey with
	  scientific format.)

	* src/Persistence.h,src/XMLPersist.h,src/XMLPersist.cpp: added
	extra optional parameter to XmlWriteValueElement() to force
	fixed rather than scientific format.

	* MesmerQA/pentyl/pentyl_isomerization_test.xml: added request for
	grain population output. (Doesn't affect QA.)

	* popDiag.xsl: Firefox output now with grain population diagrams.
	But not satisfactory as yet - different times are on separate graphs,
	rather than multiple lines for the same species being on the same
	graph. Multiple sets of conditions and range parameters untested.
	The XSLT is proving difficult - still trying to improve this.	

2012-June-03 Struan Robertson
